crates/wac-parser/tests/resolution/fail/export-duplicate-name.wac
package test:comp;

import f: func();
export f as "x";
export f as "x";
